# cayene_decoder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: CMakeLists.txt  basic_example.cpp
include/cayene/: decoder.hpp
src/: decoder.cpp  error.hpp
tests/: CMakeLists.txt  decoder_test.cpp
